# HarmonisationDiagnostics

./: .gitignore  LongitudinalReport_2026-02-06_00-52-30.html  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml
DiagnoseHarmonisation/: DiagnosticFunctions.py  DiagnosticFunctionsLong.py  DiagnosticReport.py  HarmonisationFunctions.py  PlotDiagnosticResults.py  SaveDiagnosticResults.py  Simulator.py  _version.py  cli.py
DiagnoseHarmonization/: DiagnosticFunctions.py  DiagnosticFunctionsLong.py  DiagnosticReport.py  HarmonizationFunctions.py  PlotDiagnosticResults.py  SaveDiagnosticResults.py  Simulator.py  _version.py  cli.py
docs/: Theory.md  getting_started.md  index.md  simulator.md  terminal.md
docs/api/: DiagnosticFunctions.md  DiagnosticFunctionsLong.md  DiagnosticReport.md  HarmonisationFunctions.md  HarmonizationFunctions.md  LoggingTool.md  PlotDiagnosticResults.md
examples/: DHARM_example.ipynb
tests/: test_CohensD.py  test_DiagnosticReport.py  test_PowerAnalysis.py  test_VarianceRatio.py  test_combat.py  test_covbat.py  test_frobenius.py  test_lme.py  test_mahalanobis.py  test_missing.py  test_run_longitudinal.py  test_tool_long_new.py  test_tool_longitudinal.py  test_umap.py
