[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "HarmonizationDiagnostics"
dynamic = ["version"]
description = "Diagnostics for pre- and post- Harmonisation"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
  { name = "Jacob Turnbull", email = "jacob.turnbull@ndcn.ox.ac.uk" },
  { name = "Gaurav Bhalerao", email = "gaurav.bhalerao@ndcn.ox.ac.uk" },
]

# Simplified dependencies with broader constraints for better compatibility
dependencies = [
  "numpy>=1.24,<3.0",  # Broader numpy range for compatibility
  "pandas>=2.0",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "pyarrow>=14.0",
  "requests>=2.31",
  "streamlit>=1.28",
  "umap-learn>=0.5",
  "mkdocstrings[python]>=0.24",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "flake8>=6.0",
  "build>=1.0",
  "twine>=4.0",
  "pip-tools>=7.0",
  "pipdeptree>=2.0",
  "mkdocs>=1.5", 
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=0.24",
]

docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=1.3",
]

[project.scripts]
harmdiag = "DiagnoseHarmonisation.cli:main"

[tool.setuptools_scm]
fallback_version = "0.1.1"
local_scheme = "no-local-version"                  
version_scheme = "post-release"                    

[tool.setuptools.packages.find]
where = ["."]
include = ["DiagnoseHarmonisation*"]